# euler

./: euler.rosinstall
euler_application_tools/: CMakeLists.txt  package.xml
euler_application_tools/launch/: euler_affordances.launch
euler_application_tools/robots/: euler.yaml
euler_application_tools/templates/: pickandplace.json
euler_at/: CMakeLists.txt  package.xml
euler_gazebo/: CMakeLists.txt  package.xml
euler_gazebo/config/controllers/: euler_gazebo_generic_traj_control.yaml
euler_gazebo/include/euler_gazebo/: euler_path_follower.hpp
euler_gazebo/launch/: load_euler_gazebo.launch
euler_gazebo/src/: cone_friction.cpp  euler_path_follower.cpp  friction.cpp
euler_gazebo/urdf/: euler.gazebo.component_macros.xacro  euler.gazebo.components.xacro  euler.gazebo.controllers.xacro  euler_gazebo.xacro  euler_path_follower.xacro
euler_gazebo/urdf/gazebo/: asus_xtion_macro.gazebo.xacro  sick_macros.gazebo.xacro  sick_s300.gazebo.xacro
euler_gazebo/worlds/: empty.world  mock_lab.world  new_format_empty.world
euler_support/config/: euler.srdf  euler_craftsman.rviz
euler_support/launch/: euler_craftsman_test.launch  euler_gazebo.launch  euler_rviz_sim.launch
euler_support/urdf/: asus_xtion_pro.xacro  eef_macro.xacro  euler_gazebo.xacro  euler_macro.xacro
motoman_mh5lf_support/urdf/: mh5lf_macro.xacro
vetex_support/meshes/collision/: base_link_03.stl  base_link_centered.stl  left_rear_wheel_02.stl  right_rear_wheel_02.stl
vetex_support/meshes/visual/: test_base.stl  test_wheel.stl  test_wheel_015.stl
vetex_support/urdf/: vetex_macro.xacro  vetex_test.xacro  vetex_test_macro.xacro
