<?xml version="1.0"?>
<package>
  <name>euler_gazebo</name>
  <version>0.0.0</version>
  <description>The euler_gazebo package</description>

  <maintainer email="swhart@traclabs.com">Stephen Hart</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>diff_drive_controller</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>control_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>

</package>
